@@ -184,3 +184,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 - fixed resizing of QTextEdit to minimal needed size for rendering
 - validated that rich text editor continues to work correctly (see the context help of the components)
     - in editing mode pictures did not appear; fixed now
+- fixed color of text / background in property editor
